--- a/Website/index.html
+++ b/Website/index.html
@@ -5,49 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MINI Games - StarFive</title>
   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   <header>
     <h1 class="logo">StarFive Games</h1>
     <nav>
       <a href="#home">Home</a>
-      <a href="#games">All Games</a>
-      <a href="#contact">Contact</a>
       <button class="btn-signing">Sign In</button>
     </nav>
   </header>
 
-  <main>
+  <main id="home">
     <h2 class="main-heading">🎮 Featured Mini Games</h2>
     <ul class="game-list">
       <li class="game-card">
-        <a href="games/21CardSim" class="card-link">
+        <a href="Games.html#blackjack" class="card-link">
           <div class="game-image-container">
-           <img src="poker.jpg" alt="Poker"> 
+            <img src="cards-21.webp" alt="cards">
           </div>
-          <h3>Blackjack (21)</h3>
+          <h3>21CardSim </h3>
           <p>Classic 21 card game. Beat the dealer without going over 21!</p>
-          
           <span class="game-badge">PLAY</span>
         </a>
       </li>
 
       <li class="game-card">
-        <a href="games/BattleShips Game" class="card-link">
+        <a href="Games.html#battleship" class="card-link">
           <div class="game-image-container">
-           <img src="battleship.jpg" alt="Battle Ship"> 
+            <img src="battleship.jpg" alt="Battle Ship">
           </div>
           <h3>Battleship</h3>
           <p>Challenge the computer in this classic naval strategy game. Sink all enemy ships!</p>
-          
           <span class="game-badge">PLAY</span>
         </a>
       </li>
 
       <li class="game-card">
-        <a href="games/snake/index.html" class="card-link">
+        <a href="Games.html#snake" class="card-link">
           <div class="game-image-container">
-                        <img src="snakes.jpg" alt="Snakes Game">
+            <img src="snakes.jpg" alt="Snakes Game">
           </div>
           <h3>Snake Game</h3>
           <p>Guide your snake, eat and grow—don't hit your tail!</p>
@@ -56,7 +53,7 @@
       </li>
 
       <li class="game-card">
-        <a href="games/poker/index.html" class="card-link">
+        <a href="Games.html#wordle" class="card-link">
           <div class="game-image-container">
             <img src="worldle.jpg" alt="Worldle Game">
           </div>
@@ -67,9 +64,9 @@
       </li>
 
       <li class="game-card">
-        <a href="games/poker/index.html" class="card-link">
+        <a href="Games.html#tictac" class="card-link">
           <div class="game-image-container">
-           <img src="tic.png" alt="tic-tac-toe">
+            <img src="tic.png" alt="tic-tac-toe">
           </div>
           <h3>Tic-Tac-Toe</h3>
           <p>Classic X and O game. Three in a row wins!</p>
@@ -79,6 +76,11 @@
     </ul>
   </main>
 
+  <!-- Playgama widget under the cards -->
+  <div class="playgama-box">
+    <script async src="https://widgets.playgama.com/index.js"></script>
+  </div>
+
   <footer>
     <div class="copyright">
       <p>© 2026 StarFive Games - All Rights Reserved</p>
@@ -86,4 +88,5 @@
   </footer>
 </body>
 </html>
+
 
